# ephemerals

./: .env-example  .gitignore  README.md  config.toml  go.mod  go.sum  main.go  sites500.json  sites5000.json  sites5k.json  tranco100k.csv
collection/: .gitignore  README.md  go.mod  go.sum  main.go  sites100k.json  sites5.json
preprocess/: Cargo.toml  README.md  rustfmt.toml
preprocess/src/: main.rs
