[package]
name = "preprocess"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.68"
futures = "0.3.25"
hashbrown = { version = "0.13.2", features = ["nightly", "serde"] }
log = "0.4.17"
pbr = "1.0.4"
pretty_env_logger = "0.4.0"
serde = { version = "1.0.152", features = ["derive"] }
serde_json = "1.0.91"
tokio = { version = "1.24.1", features = ["full"] }
toml = "0.5.10"
trust-dns-resolver = "0.22.0"

[profile.release]
lto = true
codegen-units = 1

[profile.release.build-override]
opt-level = 3
codegen-units = 1
