[package]
name = "preprocess"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.82"
futures = "0.3.30"
hashbrown = { version = "0.14.3", features = ["serde"] }
hickory-resolver = { version = "0.24.0", features = ["tokio", "serde", "serde-config", "rustls", "tokio-rustls"] }
indicatif = { version = "0.17.8", features = ["improved_unicode"] }
log = "0.4.21"
pretty_env_logger = "0.5.0"
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.115"
tokio = { version = "1.37.0", features = ["full"] }
toml = "0.8.12"

[profile.release]
lto = true
strip = false
codegen-units = 1

[profile.release.build-override]
opt-level = 3
codegen-units = 1
